--- a/QueueIT/appsettings.json
+++ b/QueueIT/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QueueItUserDbConn": "Server=localhost;Database=QueueIt.QueueItUser;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "QueueItDbConn": "Server=localhost;Database=QueueIt;Trusted_Connection=True;"
+  }
 }
