--- a/QueueIT/QueueIT.csproj
+++ b/QueueIT/QueueIT.csproj
@@ -42,5 +42,9 @@
       <EmbeddedResource Include="Migrations\Script0005 - Add column ToTeamId to notification.sql" />
       <None Remove="Migrations\Script0006 - add column to notification type.sql" />
       <EmbeddedResource Include="Migrations\Script0006 - add column to notification type.sql" />
+      <None Remove="Migrations\Script0007 - alter AssigneeId col - type of task table.sql" />
+      <EmbeddedResource Include="Migrations\Script0007 - alter AssigneeId col - type of task table.sql" />
+      <None Remove="Migrations\Script0008 - alter FromId and FromName to allow nulls.sql" />
+      <EmbeddedResource Include="Migrations\Script0008 - alter FromId and FromName to allow nulls.sql" />
     </ItemGroup>
 </Project>
