Added ability to edit/save acct information. Added logic to populate data on user profile

--- a/QueueIT/QueueIT.csproj
+++ b/QueueIT/QueueIT.csproj
@@ -46,5 +46,7 @@
       <EmbeddedResource Include="Migrations\Script0007 - alter AssigneeId col - type of task table.sql" />
       <None Remove="Migrations\Script0008 - alter FromId and FromName to allow nulls.sql" />
       <EmbeddedResource Include="Migrations\Script0008 - alter FromId and FromName to allow nulls.sql" />
+      <None Remove="Migrations\Script0009 - create table to hold user notification settings.sql" />
+      <EmbeddedResource Include="Migrations\Script0009 - create table to hold user notification settings.sql" />
     </ItemGroup>
 </Project>
